# durham-delivery-bot

./: makefile  pyproject.toml  readme.md
durham_delivery_bot/: __init__.py  bot.py  cart.py  cli.py  log.py
tests/: books.html  test_bot.py  test_links.py
tests/test_bot/: test_categorise_in_person2_.yml  test_format_records.yml  test_get_permalinks.yml
tests/test_links/: test_categorise_in_person0_.yml  test_categorise_in_person1_.yml  test_parse_records.yml  test_reserve_urls.yml
