[tool.poetry]
name = "durham-delivery-bot"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.0"
bs4 = "^0.0.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
durham-delivery-bot = "durham_delivery_bot:cli.cli"