[tool.poetry]
name = "durham-delivery-bot"
version = "1.3.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.0"
bs4 = "^0.0.1"
click = "^8.0.3"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
pytest-sugar = "^0.9.4"
pytest-regressions = "^2.3.1"
devtools = "^0.8.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
durham-delivery-bot = "durham_delivery_bot:cli.cli"